--- a/css/1_header.css
+++ b/css/1_header.css
@@ -20,17 +20,66 @@ nav li {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-top: 0px solid #0065fc;
 }
 
 nav li:hover {
-    border-top: 4px solid #0065fc;
-    font-weight: 400;
+    border-top: 4px solid #0065fc;    
 }
 
 nav a {
     text-decoration: none;
-    color: #0065fc;
-    font-size: 20px;
+    color: black;
+    font-size: 20px;    
 }
 
-nav
+nav a:hover {
+    color: #0065fc;
+}
+
+@media screen and (max-width: 992px) {
+
+    header {        
+        margin: 0 47px 31px 121px;
+        height: 130px;
+    }
+
+    nav li {
+        width: 150px;
+        height: 130px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    nav a {
+        text-decoration: none;
+        color: black;
+        font-size: 16px;    
+    }
+    
+}
+
+@media screen and (max-width: 768px) {
+
+   header {
+       flex-direction: column;
+       justify-content: flex-end;
+       margin: inherit;
+       height: 263px;
+   }
+
+   nav {
+       width: 100%;
+       margin-top: 45px;
+   }
+
+   nav li {
+    width: 50%;
+    height: 102px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 4px solid #f2f2f2;
+    }
+}
