--- a/css/1_header.css
+++ b/css/1_header.css
@@ -75,19 +75,26 @@ nav a:hover {
 
    nav {
        width: 100%;
-       margin-top: 45px;
+       margin-top: 50px;
    }
 
    nav li {
     width: 50%;
-    height: 102px;
+    height: 96px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-top: 4px solid #f2f2f2;
+    border-top: none;
+    border-bottom: 4px solid #f2f2f2;
     }
 
     nav a {
         font-size: 18px;
     }
+
+    nav li:hover {
+        border-bottom: 4px solid #0065fc;    
+        border-top: none;
+    }   
+    
 }
