--- a/css/1_header.css
+++ b/css/1_header.css
@@ -44,20 +44,17 @@ nav a:hover {
         height: 130px;
     }
 
+    header img {
+        width: 90px;
+    }
+
     nav li {
         width: 150px;
         height: 130px;
         display: flex;
         justify-content: center;
         align-items: center;
-    }
-
-    nav a {
-        text-decoration: none;
-        color: black;
-        font-size: 12px;    
-    }
-    
+    }    
 }
 
 @media screen and (max-width: 768px) {
@@ -66,7 +63,12 @@ nav a:hover {
        flex-direction: column;
        justify-content: flex-end;
        margin: inherit;
-       height: 263px;
+       height: 131px;
+       margin-top: 28px;
+   }
+    
+   header div {
+       width: 59px;
    }
 
    header img {
@@ -75,12 +77,12 @@ nav a:hover {
 
    nav {
        width: 100%;
-       margin-top: 50px;
+       margin-top: 25px;
    }
 
    nav li {
     width: 50%;
-    height: 96px;
+    height: 52px;
     display: flex;
     justify-content: center;
     align-items: center;
