--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,12 @@ body {
 .Maj {
     text-transform: capitalize;
 }
+
+strong {
+    font-weight: bold;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
