--- a/css/3_section_hebergement.css
+++ b/css/3_section_hebergement.css
@@ -48,7 +48,7 @@
     font-size: 18px;
 }
 
-/****** Nos cartes ******/
+/****** cartes 1 ******/
   /****** Images ******/
 
 .container {
@@ -74,7 +74,7 @@
     background-color: white;
     padding: 5px;
     margin: 30px 5px 0 0;
-    box-shadow: 0px 0px 10px grey;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     position: relative;
 }
 
@@ -85,7 +85,7 @@
 .hebergement-img {
     width: 236px;
     height: 113.5px;
-    border-radius: 25px 25px 0 0 ;
+    border-radius: 20px 20px 0 0 ;
     position: relative;
     overflow: hidden;
 }
@@ -106,7 +106,7 @@
 .hebergement_bloc_txt {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .hebergement_bloc_txt h1 {
@@ -130,3 +130,39 @@
 /****** Bloc texte ******/
 
 
+/****** Carte 2 ******/
+
+.container-populaire {
+    display: flex;
+    background-color: white;
+    border-radius: 25px;
+    padding: 5px;
+    box-shadow: 0 0 10px grey;
+    position: relative;
+    margin-bottom: 25px;
+}
+
+.container-populaire:hover {
+    bottom: 5px;
+}
+
+.populaire-img {
+    width: 120px;
+    height: 144px;
+    border-radius: 25px 0 0 25px;
+    position: relative;
+    overflow: hidden;
+    margin-right: 15px;
+}
+
+.populaire-img img {
+    width: 250%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate( -50%, -50%);
+}
+
+.h1-populaire {
+    margin-bottom: 25px;
+}
