--- a/css/3_section_hebergement.css
+++ b/css/3_section_hebergement.css
@@ -39,8 +39,8 @@
     width: max-content;
 }
 
-#more:hover {
-    border-bottom: 1px solid black;
+#more a:hover {
+    color: #0065fc;
 }
 
 .more {
@@ -62,13 +62,14 @@
 .container a {
     text-decoration: none;
     color: black;
+    width: 30%;
 }
 
 .container-hebergement {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 247px;
+    width: 100%;
     height: 199.5px;
     border-radius: 25px;
     background-color: white;
@@ -83,7 +84,7 @@
 }
 
 .hebergement-img {
-    width: 236px;
+    width: 100%;
     height: 113.5px;
     border-radius: 20px 20px 0 0 ;
     position: relative;
@@ -94,7 +95,7 @@
     width: 175%;
     position: absolute;
     left: 50%;
-    top: 10%;
+    top: 50%;
     transform: translate( -50%, -50%);
 }
 
@@ -107,10 +108,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    width: 50%;
 }
 
 .hebergement_bloc_txt h1 {
-    font-size: 16px;
+    font-size: 14px;
     margin: 5px 0;
     padding-left: 5px;
 }
@@ -125,6 +127,7 @@
     color: #0065fc;
     margin: 5px 0;
     padding-left: 5px;
+    font-size: 14px;
 }
 
 /****** Bloc texte ******/
@@ -147,16 +150,16 @@
 }
 
 .populaire-img {
-    width: 120px;
+    width: 40%;
     height: 144px;
-    border-radius: 25px 0 0 25px;
+    border-radius: 20px 0 0 20px;
     position: relative;
     overflow: hidden;
     margin-right: 15px;
 }
 
 .populaire-img img {
-    width: 250%;
+    width: 400%;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -165,4 +168,96 @@
 
 .h1-populaire {
     margin-bottom: 25px;
+}
+
+@media screen and (max-width: 992px) {
+    #hebergement {
+        flex-direction: column-reverse;
+
+    }
+
+    .container-card-populaire {
+        display: flex;
+    }
+
+    .container-card-populaire a {
+        width: 30%;
+        margin: auto;
+    }
+
+    #hebergement .hebergement_article:nth-child(2) {
+        width: 100%;
+    }
+
+    #hebergement .hebergement_article:nth-child(1) {
+        width: 100%;
+        background-color: white;
+        margin-top: 10px;
+    }
+
+    .hebergement_article h1 {
+        font-size: 18px;
+    }
+
+    .hebergement_bloc_txt h1, .hebergement_bloc_txt p {
+        font-size: 12px;        
+    }
+
+    .etoiles {
+        font-size: 12px;
+    }
+
+    .populaire-img {
+        margin-right: 5px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #hebergement {
+        width: 100%;
+        margin: inherit;
+        margin-top: 15px;
+    }
+
+    .hebergement_article {
+        border-radius: inherit;
+    }
+
+    .container-card-populaire {
+        flex-direction: column;
+    }
+
+    .h1-populaire, .hebergement_article > h1 {
+        margin: 20px;
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .container-card-populaire a {
+        width: 70%;
+        max-width: 450px;
+        margin: auto;
+    }
+
+    
+
+    .hebergement_bloc_txt h1, .hebergement_bloc_txt p {
+        font-size: 14px;        
+    }
+
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container a {
+        width: 70%;
+        max-width: 450px;
+        margin: auto;
+    }
+
+    #more {
+        margin: 25px auto;
+        font-size: 14px;
+    }
 }
