--- a/css/3_section_hebergement.css
+++ b/css/3_section_hebergement.css
@@ -108,16 +108,22 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    
+}
+.hebergement_bloc_txt-populaire {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     width: 50%;
 }
 
-.hebergement_bloc_txt h1 {
+.hebergement_bloc_txt h1, .hebergement_bloc_txt-populaire h1 {
     font-size: 14px;
     margin: 5px 0;
     padding-left: 5px;
 }
 
-.hebergement_bloc_txt p {
+.hebergement_bloc_txt p, .hebergement_bloc_txt-populaire p {
     font-size: 14px;
     margin: 5px 0;
     padding-left: 5px;
@@ -199,7 +205,8 @@
         font-size: 18px;
     }
 
-    .hebergement_bloc_txt h1, .hebergement_bloc_txt p {
+    .hebergement_bloc_txt h1, .hebergement_bloc_txt p, 
+    .hebergement_bloc_txt-populaire h1, .hebergement_bloc_txt-populaire p {
         font-size: 12px;        
     }
 
@@ -239,9 +246,8 @@
         margin: auto;
     }
 
-    
-
-    .hebergement_bloc_txt h1, .hebergement_bloc_txt p {
+    .hebergement_bloc_txt h1, .hebergement_bloc_txt p,
+    .hebergement_bloc_txt-populaire h1, .hebergement_bloc_txt-populaire p {
         font-size: 14px;        
     }
 
@@ -260,4 +266,8 @@
         margin: 25px auto;
         font-size: 14px;
     }
+
+    .hebergement-img img {
+        top: 0;
+    } 
 }
