--- a/css/3_section_hebergement.css
+++ b/css/3_section_hebergement.css
@@ -59,8 +59,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    position: relative;
-    
+    position: relative;  
 }
 
 .container a {
@@ -217,6 +216,7 @@
     .etoiles {
         font-size: 12px;
     }
+
     .hebergement-img img{
         width: 120%;
         top: 50%;
@@ -228,7 +228,7 @@
     .populaire-img img {
         width: 312%;
     }
-    
+}  
 
 @media screen and (max-width: 768px) {
     .hebergement {
@@ -282,6 +282,7 @@
         top: 50%;
         width: 100%;
     }
+
     .populaire-img img {
         width: 265%;
     }
