--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
 body {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Raleway', sans-serif;    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+section {
+    width: 90%;
+}
+
+header, footer, main {
+    width: 100%;
 }
 
 .bleuclaire {
