--- a/css/4_section_activite.css
+++ b/css/4_section_activite.css
@@ -161,8 +161,13 @@
         align-items: center;
     }
 
-    .un_bloc, .deux_bloc {
+    .activite_bloc {
         width: 90%;
+        align-items: center;
+    }
+
+    .un_bloc, .deux_bloc {
+        width: 100%;
         max-width: 450px; 
         margin-bottom: 20px; 
     }
