--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,12 @@ footer, main {
     width: 100%;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .bleuclaire {
     color: #deebff;
 }
