--- a/css/2_section_recherche.css
+++ b/css/2_section_recherche.css
@@ -281,7 +281,7 @@
     }
 
     .Filtre-bloc h2 {
-        margin-right: none;
+        margin-right: inherit;
         margin-bottom: 18px;
     }
 
