--- a/css/1_header.css
+++ b/css/1_header.css
@@ -68,6 +68,7 @@ nav a {
        margin: inherit;
        height: 131px;
        margin-top: 28px;
+       width: 100%;
    }
     
    header div {
