--- a/css/4_section_activite.css
+++ b/css/4_section_activite.css
@@ -80,27 +80,18 @@
     height:100%;
 }
 
-.long img {
-    width: 350%;
-    transform: translate( -18%, -12%);
+.long img, .moyen img, .court img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .moyen {
     height: 100%;
 }
 
-.moyen img {
-    transform: translate(-18%, -35%);
-    width: 165%;
-}
-
 .court {
     height: 100%;
-}
-
-.court img {
-    transform: translate(-18%, -18%);
-    width: 165%;
 }
 
 /*Média quéries tablette */
@@ -134,21 +125,7 @@
     .activitemoyen, .activitecourt {
         width: 100%;
         height: 200px;
-    }
-    .long img {
-        width: 127%;
-        transform: translate( -1%, -36%);
-    }
-
-    .moyen img {
-        transform: translate(-9%, -39%);
-        width: 110%;
-    }
-
-    .court img {
-        transform: translate(-5%, -18%);
-        width: 124%;
-    }
+    }    
 }
 
 /*Média queries mobile*/
@@ -184,19 +161,3 @@
         width: 100%;
         height: 200px;
     }
-    .long img {
-        width: 127%;
-        transform: translate( -1%, -36%);
-    }
-
-    .moyen img {
-        transform: translate(-9%, -39%);
-        width: 110%;
-    }
-
-    .court img {
-        transform: translate(-5%, -18%);
-        width: 124%;
-    }
-}
-
