--- a/css/4_section_activite.css
+++ b/css/4_section_activite.css
@@ -131,6 +131,7 @@
 /*Média queries mobile*/
 
 @media screen and (max-width:768px) {
+
     .container_activite {
         flex-direction: column;
         width: 100%;
@@ -161,3 +162,4 @@
         width: 100%;
         height: 200px;
     }
+}
