--- a/css/4_section_activite.css
+++ b/css/4_section_activite.css
@@ -49,17 +49,22 @@
     border-radius: 25px;
 }
 
-.activitecourt a, .activitemoyen a, .un_bloc a {
+.activitecourt h3, .activitemoyen h3, .un_bloc h3 {
     position: absolute;
     bottom: 0px;
     width: 100%;
     background-color: white;
-    padding: 15px 0 35px 15px;
+    padding: 15px 5px 40px 16px;
     height: 30px;
     border-radius: 0 0 24px 24px;
 }
 
-.activite a:hover {
+.activite a:hover .activitemoyen, .activite a:hover .activitecourt, .un_bloc:hover{
+    
+    top: -5px;
+}
+
+.activite a:hover .activitemoyen h3, .activite a:hover .activitecourt h3, .un_bloc:hover h3 {
     color: #0065fc;
 }
 
