--- a/css/2_section_recherche.css
+++ b/css/2_section_recherche.css
@@ -245,7 +245,17 @@
     }
 
     .recherche-bouton {
-        display: none;
+        display: flex;
+        justify-content: center;
+        justify-items: center;
+        width: 50px;
+        height: 50px;
+        border-radius: 15px;
+        background-color: transparent;
+        color: transparent;
+        position: absolute;
+        right: -20px;
+        z-index: 1;
     }
 
     .loupe {
@@ -258,12 +268,16 @@
         background-color: #0065fc;
         color: white;
         position: absolute;
-        right: 0;
+        right: -20px;
     }
 
     .loupe i {
         display: flex;
         align-items: center;
+    }
+
+    .recherche-bouton:hover > .loupe:hover{
+        color: #deebff;
     }
 
     .recherche-area, .form p, .form {
@@ -272,6 +286,8 @@
 
     .recherche-area {
         width: 100%;
+        padding: 0 30px 0 20px;
+        margin-right: 20px;
     }
     
     .Filtre-bloc {
