--- a/css/2_section_recherche.css
+++ b/css/2_section_recherche.css
@@ -242,20 +242,10 @@
 
     .recherche-area {
         padding: 0 17px;
-    }
+    }    
 
     .recherche-bouton {
-        display: flex;
-        justify-content: center;
-        justify-items: center;
-        width: 50px;
-        height: 50px;
-        border-radius: 15px;
-        background-color: transparent;
-        color: transparent;
-        position: absolute;
-        right: -20px;
-        z-index: 1;
+        display: none;
     }
 
     .loupe {
@@ -269,15 +259,33 @@
         color: white;
         position: absolute;
         right: -20px;
+        
     }
 
     .loupe i {
         display: flex;
         align-items: center;
+        position: relative;        
     }
 
-    .recherche-bouton:hover > .loupe:hover{
-        color: #deebff;
+    .recherche-bouton2 {
+        display: flex;
+        justify-content: center;
+        justify-items: center;
+        width: 50px;
+        height: 50px;
+        border-radius: 15px;
+        background-color: transparent;
+        color: transparent;
+        position: absolute;
+        right: -20px;
+        z-index: 1;
+        border: none ;
+        cursor: pointer;
+    }
+
+    .loupe:hover i{
+        font-size: 16px;        
     }
 
     .recherche-area, .form p, .form {
