--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&display=swap');
 
 * {
     box-sizing: border-box;
@@ -46,4 +46,8 @@ strong {
 a {
     text-decoration: none;
     color: black;
+}
+
+h2 {
+    font-weight: 800;
 }
