--- a/css/2_section_recherche.css
+++ b/css/2_section_recherche.css
@@ -7,7 +7,6 @@
 
 .recherche h2 {
     font-size: 20px;
-    font-weight: bold;
     margin-bottom: 16px;
 }
 
@@ -78,7 +77,6 @@
 
 .Filtre-bloc h2 {
     margin-right: 25px;
-    font-weight: bold;
 
 }
 
@@ -113,7 +111,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f2f2f2;
+    background-color: #deebff;
     color: #0065fc;
     border-radius: 50%;
     position: absolute;
@@ -309,8 +307,7 @@
     }
 
     .filtres {
-        padding: 13px 13px 13px 45px;
-        margin-right: 8px;
+        margin-right: 15px;
     }
 
     .info {
